--- a/contactform_web/src/Component/ContactForm.css
+++ b/contactform_web/src/Component/ContactForm.css
@@ -107,6 +107,22 @@ textarea:focus {
     color: #666;
 }
 
+.sendicon{
+    max-width: 15px;
+    max-height: 15px;
+}
+
+.submitbtn{
+    display: flex;
+    justify-content: center;
+    gap: 10px;
+    font-size: 14px;
+}
+
+#emailLink{
+    color: #666;
+    text-decoration: none;
+}
 @media (max-width: 768px) {
     .contact-form {
         padding: 15px;
