--- a/contactform_web/src/Component/ContactForm.css
+++ b/contactform_web/src/Component/ContactForm.css
@@ -137,6 +137,11 @@ body {
     font-size: 1rem;
 }
 
+.form-group textarea{
+    resize: vertical;
+    min-height: 200px;
+}
+
 .form-group input:focus,
 .form-group textarea:focus {
     border-color: #ff6347;
@@ -194,66 +199,66 @@ body {
     transform: scale(1.2);
 }
 
-.messagediv {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
+                                    .messagediv {
+                                        display: flex;
+                                        justify-content: space-between;
+                                        align-items: center;
+                                    }
 
-.modal-overlay {
-    position: fixed;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    background-color: rgba(0, 0, 0, 0.5);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    z-index: 1000;
-    border: 1px solid tomato;
-}
+                                    .modal-overlay {
+                                        position: fixed;
+                                        top: 0;
+                                        left: 0;
+                                        right: 0;
+                                        bottom: 0;
+                                        background-color: rgba(0, 0, 0, 0.5);
+                                        display: flex;
+                                        justify-content: center;
+                                        align-items: center;
+                                        z-index: 1000;
+                                        border: 1px solid tomato;
+                                    }
 
-.modal-content {
-    background: white;
-    padding: 30px;
-    border-radius: 8px;
-    width: 800px;
-    height: auto;
-    position: relative;
-}
+                                    .modal-content {
+                                        background: white;
+                                        padding: 30px;
+                                        border-radius: 8px;
+                                        width: 800px;
+                                        height: auto;
+                                        position: relative;
+                                    }
 
-.close-button {
-    position: absolute;
-    top: 10px;
-    right: 10px;
-    font-size: 1.2rem;
-    cursor: pointer;
-    background: transparent;
-    border: none;
-    font-size: 24px;
-    font-weight: 700;
-    color: #ff6347;
-}
+                                    .close-button {
+                                        position: absolute;
+                                        top: 10px;
+                                        right: 10px;
+                                        font-size: 1.2rem;
+                                        cursor: pointer;
+                                        background: transparent;
+                                        border: none;
+                                        font-size: 24px;
+                                        font-weight: 700;
+                                        color: #ff6347;
+                                    }
 
-.close-button:hover {
-    transform: scale(1.2);
-}
+                                    .close-button:hover {
+                                        transform: scale(1.2);
+                                    }
 
-.modal-overlay textarea {
-    width: 100%;
-    margin-top: 8px;
-    padding: 10px;
-    border-radius: 5px;
-    border: 1px solid #ccc;
-    font-size: 1rem;
-}
+                                    .modal-overlay textarea {
+                                        width: 100%;
+                                        margin-top: 8px;
+                                        padding: 10px;
+                                        border-radius: 5px;
+                                        border: 1px solid #ccc;
+                                        font-size: 1rem;
+                                    }
 
-.modal-overlay textarea:focus {
-    border-color: #ff6347;
-    outline: none;
-    transition: border-color 0.3s ease-in-out;
-}
+                                    .modal-overlay textarea:focus {
+                                        border-color: #ff6347;
+                                        outline: none;
+                                        transition: border-color 0.3s ease-in-out;
+                                    }
 
 @media (max-width: 768px) {
     .contact-container {
